--- a/mobile.css
+++ b/mobile.css
@@ -9,9 +9,27 @@ body {
     top: 10vh;
     left: 1em;
     width: 90vw;
+    box-sizing: border-box;
     background-color: black;
     max-height: 90vh;
+    padding: 1em;
+    border-radius: .5em;
     overflow: auto;
+}
+
+#instructions > .close {
+    display: inline-block;
+    position: absolute;
+    right: 0;
+    top: 0;
+    line-height: 1.3;
+    background-color: red;
+    color: white;
+    border-radius: 1em;
+    width: 1.3em;
+    height: 1.3em;
+    padding: .15em .15em;
+    text-align: center;
 }
 
 .h1 {
@@ -22,5 +40,7 @@ body {
     display: inline-block;
     height: 1em;
     vertical-align: middle;
+    color: blue;
+    text-shadow: none;
 }
 
