--- a/standard.css
+++ b/standard.css
@@ -12,6 +12,10 @@
     display: none;
 }
 
+#instructions > .close {
+    display: none;
+}
+
 body {
     font-family: "Modern Antiqua";
     font-size: 7vmin;
